--- a/package.json
+++ b/package.json
@@ -12,12 +12,6 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.12.0",
-    "express": "^4.13.4",
-    "firebase": "^3.2.0",
-    "react": "^15.1.0",
-    "react-bootstrap": "^0.29.5",
-    "react-dom": "^15.1.0",
-    "react-router": "^2.4.1",
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
@@ -25,11 +19,19 @@
     "babel-preset-stage-0": "^6.5.0",
     "deep-freeze-strict": "^1.1.1",
     "expect": "^1.20.2",
+    "express": "^4.13.4",
+    "firebase": "^3.2.0",
     "jquery": "^2.2.1",
     "moment": "^2.14.1",
+    "node-env-file": "^0.1.8",
     "node-uuid": "^1.4.7",
+    "path": "^0.12.7",
+    "react": "^15.1.0",
     "react-addons-test-utils": "^15.1.0",
+    "react-bootstrap": "^0.29.5",
+    "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
+    "react-router": "^2.4.1",
     "redux": "^3.5.2",
     "redux-mock-store": "^1.1.2",
     "redux-thunk": "^2.1.0",
@@ -37,12 +39,12 @@
     "webpack": "^1.13.1"
   },
   "devDependencies": {
-    "karma": "^1.1.0",
-    "karma-chrome-launcher": "^1.0.1",
-    "karma-mocha": "^1.1.1",
-    "karma-mocha-reporter": "^2.0.4",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-mocha": "^0.2.2",
+    "karma-mocha-reporter": "^2.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
-    "mocha": "^2.5.3"
+    "mocha": "^2.4.5"
   }
 }
