--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.2",
+    "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^0.2.2",
     "karma-mocha-reporter": "^2.0.0",
     "karma-sourcemap-loader": "^0.3.7",
