--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "todo-app",
   "version": "1.0.0",
   "description": "Todo App",
+  "engines":{
+    "node": "6.11.1"
+  },
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test karma start",
